viewport render in broken with border render activated #44707

Closed
opened 2015-05-14 11:34:22 +02:00 by Ronny G · 17 comments

System Information
ubuntu 14.04, 630GT, 4930k

Blender Version
Broken: master

Short description of error

viewport render is broken with border render activated (not f12 render)
also happens with view render border

Exact steps for others to reproduce the error

open the blend file
active viewport render
disable/enable border render (dimensions panel)

cyclesboderrenderbroken.blend

**System Information** ubuntu 14.04, 630GT, 4930k **Blender Version** Broken: master **Short description of error** viewport render is broken with border render activated (not f12 render) also happens with view render border **Exact steps for others to reproduce the error** open the blend file active viewport render disable/enable border render (dimensions panel) [cyclesboderrenderbroken.blend](https://archive.blender.org/developer/F174547/cyclesboderrenderbroken.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ

Added subscriber: @zeauro

Added subscriber: @zeauro

ubuntu 64 bits 14.04, blender 2.74.5 hash 8fb9e14. titan black nvidia driver 349.16

I cannot reproduce. Disabling/enabling render border works, here.
It works from dimension panel, from View panel of N column.
With shortcuts (shift B, ctrl B, ctrl alt B), no problem, too.

Do you have an addon enabled ? can you precise hash and driver ?

ubuntu 64 bits 14.04, blender 2.74.5 hash 8fb9e14. titan black nvidia driver 349.16 I cannot reproduce. Disabling/enabling render border works, here. It works from dimension panel, from View panel of N column. With shortcuts (shift B, ctrl B, ctrl alt B), no problem, too. Do you have an addon enabled ? can you precise hash and driver ?
Author

hash is the same: 8fb9e14
driver version: 331.113
no addons (factory reset)
video: http://youtu.be/BcpYJxxmHYg

hash is the same: 8fb9e14 driver version: 331.113 no addons (factory reset) video: http://youtu.be/BcpYJxxmHYg
Author
the problem appears after this commit https://developer.blender.org/rB4fc31881127786f244bc67ad45b3787c6d7917a2
Antonis Ryakiotakis was assigned by Bastien Montagne 2015-05-15 11:44:23 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Odd, I cannot reproduce the issue here either… Assigning to Antony since you claim bug appears after one of his commits, but if we cannot reproduce the issue it may be hard to fix it.

Odd, I cannot reproduce the issue here either… Assigning to Antony since you claim bug appears after one of his commits, but if we cannot reproduce the issue it may be hard to fix it.

What do you use to render? Do you use multiple GPUs?

What do you use to render? Do you use multiple GPUs?
Author

no gpu rendering here just cpu

found the "solution" if i enable WITH_OPENCOLORIO it works... strange

no gpu rendering here just cpu found the "solution" if i enable WITH_OPENCOLORIO it works... strange
Member

Added subscriber: @Lockal

Added subscriber: @Lockal
Member

Reproduced this problem with no ocio, added an inline comment with possible fix here: 4fc318811

Reproduced this problem with no ocio, added an inline comment with possible fix here: 4fc318811

Added subscriber: @brecht

Added subscriber: @brecht

The suggested fix looks good to me, I think you can go ahead and commit this.

The suggested fix looks good to me, I think you can go ahead and commit this.

This issue was referenced by 88acb3c599

This issue was referenced by 88acb3c599b31d37375c325c47cc9264ad700720

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@219c83d808

This issue was referenced by blender/cycles@219c83d8089f9031e3fd27df2aaa1f12622c846d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44707
No description provided.