Fix T44707: cycles border render regression